// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilder should build an AND condition 1`] = `
AndCondition {
  "conditions": [
    FilenameCondition {
      "names": [
        "cat",
      ],
    },
    KeywordCondition {
      "keywords": [
        "black cat",
      ],
      "searchPDFContent": false,
    },
  ],
}
`;

exports[`QueryBuilder should build an OR condition 1`] = `
OrCondition {
  "conditions": [
    FilenameCondition {
      "names": [
        "cat",
      ],
    },
    KeywordCondition {
      "keywords": [
        "black cat",
      ],
      "searchPDFContent": false,
    },
  ],
}
`;

exports[`QueryBuilder should build nested conditions 1`] = `
OrCondition {
  "conditions": [
    AndCondition {
      "conditions": [
        FilenameCondition {
          "names": [
            "cat",
          ],
        },
        KeywordCondition {
          "keywords": [
            "black cat",
          ],
          "searchPDFContent": false,
        },
      ],
    },
    AndCondition {
      "conditions": [
        FilenameCondition {
          "names": [
            "dog",
          ],
        },
        KeywordCondition {
          "keywords": [
            "white dog",
          ],
          "searchPDFContent": false,
        },
      ],
    },
  ],
}
`;
